@@ -31,6 +31,7 @@ SEXP zph1(SEXP gt2,    SEXP y2,
     double *a, *a2, **cmat, **cmat2;
     double denom=0, dtime, ndead, denom2;
     double risk, deadwt, wtave;
+    int nprotect;
 
     /* scalar input arguments and counts*/
     int  nused, nvar, nevent, nstrat;
@@ -74,10 +75,14 @@ SEXP zph1(SEXP gt2,    SEXP y2,
     /*
     **  Set up the ragged arrays and scratch space
     */
-    if (MAYBE_REFERENCED(covar2))
-	covar = dmatrix(REAL(duplicate(covar2)), nused, nvar);
+    nprotect =0;
+    if (MAYBE_REFERENCED(covar2)){
+	nprotect++;
+	covar = dmatrix(REAL(PROTECT(duplicate(covar2))), nused, nvar);
+	}
     else covar = dmatrix(REAL(covar2), nused, nvar);
 
+    nprotect++;
     PROTECT(rlist = mkNamed(VECSXP, rnames));
     u = REAL(SET_VECTOR_ELT(rlist, 0, allocVector(REALSXP, 2*nvar)));
     dtemp = REAL(SET_VECTOR_ELT(rlist, 1, allocMatrix(REALSXP, 2*nvar, 2*nvar)));
@@ -294,6 +299,6 @@ SEXP zph1(SEXP gt2,    SEXP y2,
 	    imat[i+nvar][j] = imat[j][i+nvar];
     }	
 
-    UNPROTECT(1);
+    UNPROTECT(nprotect);
     return(rlist);
 }	
