@@ -1,6 +1,6 @@
 
-R Under development (unstable) (2019-01-23 r76006) -- "Unsuffered Consequences"
-Copyright (C) 2019 The R Foundation for Statistical Computing
+R Under development (unstable) (2020-02-28 r77869) -- "Unsuffered Consequences"
+Copyright (C) 2020 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -162,7 +162,7 @@ x 0.8596    2.3621   0.7131 1.205    0.228
   exp(coef) exp(-coef) lower .95 upper .95
 x     2.362     0.4233    0.5839     9.556
 
-Concordance= 0.638  (se = 0.161 )
+Concordance= 0.637  (se = 0.161 )
 Likelihood ratio test= 1.69  on 1 df,   p=0.2
 Wald test            = 1.45  on 1 df,   p=0.2
 Score (logrank) test = 1.52  on 1 df,   p=0.2
@@ -203,4 +203,4 @@ Score (logrank) test = 1.52  on 1 df,   p=0.2
 > 
 > proc.time()
    user  system elapsed 
-  0.860   0.040   0.902 
+  0.906   0.043   0.941 
