@@ -1,6 +1,6 @@
 
-R Under development (unstable) (2019-05-16 r76518) -- "Unsuffered Consequences"
-Copyright (C) 2019 The R Foundation for Statistical Computing
+R Under development (unstable) (2020-02-28 r77869) -- "Unsuffered Consequences"
+Copyright (C) 2020 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -89,7 +89,7 @@ x 0.8596    2.3621   0.7131 1.205    0.228
   exp(coef) exp(-coef) lower .95 upper .95
 x     2.362     0.4233    0.5839     9.556
 
-Concordance= 0.638  (se = 0.161 )
+Concordance= 0.637  (se = 0.161 )
 Likelihood ratio test= 1.69  on 1 df,   p=0.2
 Wald test            = 1.45  on 1 df,   p=0.2
 Score (logrank) test = 1.52  on 1 df,   p=0.2
@@ -200,7 +200,7 @@ x 0.8596    2.3621   0.7131 1.205    0.228
   exp(coef) exp(-coef) lower .95 upper .95
 x     2.362     0.4233    0.5839     9.556
 
-Concordance= 0.638  (se = 0.172 )
+Concordance= 0.637  (se = 0.172 )
 Likelihood ratio test= 1.69  on 1 df,   p=0.2
 Wald test            = 1.45  on 1 df,   p=0.2
 Score (logrank) test = 1.52  on 1 df,   p=0.2
@@ -422,4 +422,4 @@ TRUE
 > 
 > proc.time()
    user  system elapsed 
-  0.829   0.065   0.888 
+  0.986   0.049   1.028 
