@@ -1,6 +1,6 @@
 
-R Under development (unstable) (2019-03-27 r76274) -- "Unsuffered Consequences"
-Copyright (C) 2019 The R Foundation for Statistical Computing
+R Under development (unstable) (2020-01-13 r77659) -- "Unsuffered Consequences"
+Copyright (C) 2020 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -424,10 +424,10 @@ n= 21
 > points(kfit$time, qnorm(1-kfit$surv), pch='+')
 > 
 > dev.off()  #close the plot file
-pdf 
-  2 
+null device 
+          1 
 > 
 > 
 > proc.time()
    user  system elapsed 
-  2.414   0.067   2.476 
+  2.655   0.063   2.712 
