@@ -1,6 +1,6 @@
 
-R Under development (unstable) (2019-08-23 r77061) -- "Unsuffered Consequences"
-Copyright (C) 2019 The R Foundation for Statistical Computing
+R Under development (unstable) (2020-01-13 r77659) -- "Unsuffered Consequences"
+Copyright (C) 2020 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -23,9 +23,9 @@ Type 'q()' to quit R.
 > #  a row merged in that is a censor, don't mark it as a cumevent.
 > #
 > base <- data.frame(
-+   id = 1:2, tstart = c(0, 0), tstop  = c(10, 10), got_flue = c(0, 0), 
-+   has_flue = factor(c("no", "no"), levels = c("no", "yes")))
-> base <- tmerge(base, base, id = id, got_flue = event(tstop, got_flue))
++   id = 1:2, tstart = c(0, 0), tstop  = c(10, 10), got_flu = c(0, 0), 
++   has_flu = factor(c("no", "no"), levels = c("no", "yes")))
+> base <- tmerge(base, base, id = id, got_flu = event(tstop, got_flu))
 > 
 > # add time-varying covariates
 > vars <- data.frame(id = c(1, rep(2, 5)), time = c(0, (0:4) * 2), x = rnorm(6))
@@ -35,13 +35,16 @@ Type 'q()' to quit R.
 > events <- data.frame(
 +   id = c(2, 2, 2), 
 +   # notice the zero -- the second row should not add an event
-+   got_flue = c(1,0,2), 
-+   has_flue = c("yes", "no", "yes"),
++   got_flu = c(1,0,2), 
++   has_flu = c("yes", "no", "yes"),
 +   time = c(3, 5, 8))
-> b2 <- tmerge(base, events, id = id, got_flue = cumevent(time, got_flue),
-+                has_flue = tdc(time, has_flue))
+> b2 <- tmerge(base, events, id = id, got_flu = cumevent(time, got_flu),
++                has_flu = tdc(time, has_flu))
+Warning message:
+In tmerge(base, events, id = id, got_flu = cumevent(time, got_flu),  :
+  replacement of variable 'has_flu'
 > 
-> all.equal(b2$got_flue, c(0,0,1,0,0,0,3,0))
+> all.equal(b2$got_flu, c(0,0,1,0,0,0,3,0))
 [1] TRUE
 > 
 > 
@@ -77,4 +80,4 @@ successful tmerge error test
 > 
 > proc.time()
    user  system elapsed 
-  0.702   0.051   0.747 
+  0.808   0.035   0.836 
